deployments/openshift/kustomize/base/backend-services/networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-nestjs
spec:
  podSelector:
    matchLabels:
      app: backend-services
  ingress:
    - {}
  policyTypes:
    - Ingress
